[gd_scene load_steps=18 format=3 uid="uid://cbjkmvfikbmrd"]

[ext_resource type="Script" uid="uid://befkf6skdx844" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="Texture2D" uid="uid://ctv3jdqdwtq0" path="res://Screen.png" id="2_e2o6t"]
[ext_resource type="Texture2D" uid="uid://c8nm2cfneaiv6" path="res://assets/TamagotchiMock.png" id="2_eow3j"]
[ext_resource type="FontFile" uid="uid://bvbla2y5acuvc" path="res://assets/fonts/6px-Normal.ttf" id="4_7jktm"]
[ext_resource type="Texture2D" uid="uid://cis13521liris" path="res://assets/TamagotchiTitle.png" id="4_vef74"]
[ext_resource type="Texture2D" uid="uid://stb4d8j2cj1q" path="res://MapScreen.png" id="5_ryrav"]
[ext_resource type="Texture2D" uid="uid://pnftkwsullo7" path="res://MapPlayerLocation.png" id="6_eow3j"]
[ext_resource type="PackedScene" uid="uid://ctpra1gnnkbux" path="res://dog_collection_area.tscn" id="6_j5wjh"]
[ext_resource type="Resource" uid="uid://bmexksiyu3odd" path="res://resources/Dog1.tres" id="7_vef74"]
[ext_resource type="Script" uid="uid://cmmxdo2506oe1" path="res://scripts/dog_resource.gd" id="9_215e1"]
[ext_resource type="PackedScene" uid="uid://6iqyauaoiw8q" path="res://dog_display.tscn" id="9_hve3p"]
[ext_resource type="Script" uid="uid://b6ujurrcn73aq" path="res://scripts/notification.gd" id="10_hve3p"]
[ext_resource type="Script" uid="uid://ckw43y4v8ssm2" path="res://scripts/dog_collection.gd" id="10_mfdv2"]
[ext_resource type="Resource" uid="uid://bql5623ywsbpg" path="res://resources/Dog2.tres" id="11_7sc4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hve3p"]
bg_color = Color(0.372549, 0.454902, 0.929412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_eow3j"]
radius = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc0e3"]
bg_color = Color(1, 0.176471, 0, 1)

[node name="GameCanvas" type="CanvasLayer"]

[node name="Game" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fc0e3")
dog_display_scene = ExtResource("9_hve3p")

[node name="Tamagotchi" type="TextureRect" parent="Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_eow3j")
stretch_mode = 2

[node name="Screen" type="TextureRect" parent="Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_e2o6t")
stretch_mode = 2

[node name="WaterBar" type="ProgressBar" parent="Game"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -17.5
offset_right = 12.0
offset_bottom = 9.5
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hve3p")
step = 1.0
value = 50.0
fill_mode = 3
show_percentage = false

[node name="Title" type="Control" parent="Game"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Game/Title"]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_vef74")

[node name="PlayButton" type="Button" parent="Game/Title"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Control" parent="Game"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Game/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game/Menu/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CollectionButton" type="Button" parent="Game/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8

[node name="Label" type="Label" parent="Game/Menu/MarginContainer/VBoxContainer/CollectionButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = "Collection"

[node name="MapButton" type="Button" parent="Game/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8

[node name="Label2" type="Label" parent="Game/Menu/MarginContainer/VBoxContainer/MapButton"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = "Map"

[node name="Map" type="Control" parent="Game"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MapClip" type="Control" parent="Game/Map"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)

[node name="MapBackground" type="Sprite2D" parent="Game/Map/MapClip"]
unique_name_in_owner = true
texture = ExtResource("5_ryrav")

[node name="DogCollectionArea" parent="Game/Map/MapClip/MapBackground" instance=ExtResource("6_j5wjh")]
dogs = Array[ExtResource("9_215e1")]([ExtResource("7_vef74"), ExtResource("11_7sc4i")])

[node name="DogCollectionArea2" parent="Game/Map/MapClip/MapBackground" instance=ExtResource("6_j5wjh")]
position = Vector2(44, -32)
dogs = Array[ExtResource("9_215e1")]([ExtResource("7_vef74"), ExtResource("11_7sc4i")])

[node name="PlayerLocation" type="TextureRect" parent="Game/Map/MapClip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("6_eow3j")

[node name="PlayerArea" type="Area2D" parent="Game/Map/MapClip/PlayerLocation" groups=["player"]]
position = Vector2(32, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/MapClip/PlayerLocation/PlayerArea"]
shape = SubResource("CircleShape2D_eow3j")

[node name="DogCollection" type="Control" parent="Game"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("10_mfdv2")

[node name="TabContainer" type="TabContainer" parent="Game/DogCollection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.0
offset_right = 16.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
clip_tabs = false
tabs_visible = false
deselect_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 56.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 3

[node name="BackButton" type="Button" parent="Game/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8

[node name="Label3" type="Label" parent="Game/HBoxContainer/BackButton"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = "<<"

[node name="MenuButton" type="Button" parent="Game/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8

[node name="Label4" type="Label" parent="Game/HBoxContainer/MenuButton"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = " ="

[node name="ForwardButton" type="Button" parent="Game/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8

[node name="Label5" type="Label" parent="Game/HBoxContainer/ForwardButton"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = ">>"

[node name="TempGauge" type="ProgressBar" parent="Game/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_fc0e3")
step = 1.0
value = 50.0
show_percentage = false

[node name="ExitButton" type="Button" parent="Game"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_top = 3.0
offset_right = -9.0
offset_bottom = 11.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 7

[node name="Label5" type="Label" parent="Game/ExitButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_7jktm")
theme_override_font_sizes/font_size = 8
text = " X"

[node name="DogTimer" type="Timer" parent="Game"]

[node name="WaterTimer" type="Timer" parent="Game"]
wait_time = 2.0
autostart = true

[node name="Notification" type="RichTextLabel" parent="Game"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 0
offset_left = 12.0
offset_top = 5.0
offset_right = 52.0
offset_bottom = 45.0
pivot_offset = Vector2(20, 20)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_7jktm")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[wave][center]

New Dog!"
script = ExtResource("10_hve3p")

[connection signal="pressed" from="Game/Title/PlayButton" to="Game" method="_on_play_button_pressed"]
[connection signal="pressed" from="Game/Menu/MarginContainer/VBoxContainer/CollectionButton" to="Game" method="_on_collection_button_pressed"]
[connection signal="pressed" from="Game/Menu/MarginContainer/VBoxContainer/MapButton" to="Game" method="_on_map_button_pressed"]
[connection signal="mouse_entered" from="Game/Map/MapClip" to="Game" method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Game/Map/MapClip" to="Game" method="_on_control_mouse_exited"]
[connection signal="area_entered" from="Game/Map/MapClip/PlayerLocation/PlayerArea" to="Game" method="_on_player_area_area_entered"]
[connection signal="pressed" from="Game/HBoxContainer/BackButton" to="Game" method="_on_back_button_pressed"]
[connection signal="pressed" from="Game/HBoxContainer/MenuButton" to="Game" method="_on_menu_button_pressed"]
[connection signal="pressed" from="Game/HBoxContainer/ForwardButton" to="Game" method="_on_forward_button_pressed"]
[connection signal="pressed" from="Game/ExitButton" to="Game" method="_on_exit_button_pressed"]
[connection signal="timeout" from="Game/WaterTimer" to="Game" method="_on_water_timer_timeout"]
